banner styles update

--- a/style.css
+++ b/style.css
@@ -149,6 +149,7 @@ body {
   flex-direction: row;
   align-items: center;
   justify-content: space-evenly;
+  background-position: center;
 }
 
 .card2 {
