--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -102,4 +102,10 @@
         font-size: 16px;
         text-align: justify;
     }
+    .e-mail-item{
+        font-size: 1.2rem;
+    }
+    .contact-item,.e-mail-item{
+        text-align: center;
+    }
 }
