--- a/style.css
+++ b/style.css
@@ -201,7 +201,7 @@ a:focus {
 .service-item {
   font-size: 25px;
   color: white;
-  background-color: black;
+  background-color: rgba(0, 0, 0, 0.50);
   border: 1px solid white;
 
 }
@@ -209,20 +209,57 @@ a:focus {
 .service-item2 {
   font-size: 18px;
   color: white;
-  background-color: black;
+  background-color: rgba(0, 0, 0, 0.50);
   border: 1px solid white;
-
 }
-
+.us-item, .contact-item{
+  font-size: 1.2rem;
+  background-color: rgba(0, 0, 0, 0);
+  color: white;
+}
+.contact-item{
+  font-size: 1.3rem;
+}
 .bold {
   font-weight: bold;
 }
 
 .card-services {
   margin-bottom: 15px;
-  background-color: black;
+  background-color: rgba(0, 0, 0, 0.50);
   border: 1px solid white;
 }
 .form-label{
   color: white;
+}
+.wp-item{
+  background-color: rgba(0, 0, 0, 0);
+  color: white;
+}
+.wp{
+  width: 35px;
+}
+footer{
+  margin: 0;
+  padding: 5px;
+  background-color: black;
+  color: white;
+}
+
+.float{
+	position:fixed;
+	width:60px;
+	height:60px;
+	bottom:40px;
+	right:40px;
+	background-color:#25d366;
+	color:#FFF;
+	border-radius:50px;
+	text-align:center;
+  font-size:30px;
+  z-index:100;
+}
+
+.my-float{
+	margin-top:16px;
 }
