--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -51,13 +51,16 @@
 
     .container {
         margin: 0;
+        height: 260px;
+        padding-top: 25px;
+        padding-bottom: 25px;
     }
 
     .banner {
         border-radius: 10px;
         background-image: url("./assets/plomeria2.jpg");
-        width: 90%;
-        height: 350px;
+        width: 95%;
+        height: 100%;
         background-size: cover;
         background-repeat: no-repeat;
         box-shadow: 3px 3px 14px 1px rgba(0, 0, 0, 0.69);
@@ -69,7 +72,7 @@
     }
 
     .card2 {
-        background-color: rgba(255, 255, 255, 0.76);
+        height: 80%;
         width: 80%;
     }
 
@@ -96,16 +99,23 @@
     }
 
     .service-item {
-        font-size: 22px;
+        font-size: 18px;
     }
     .service-item2{
-        font-size: 16px;
+        font-size: 18px;
         text-align: justify;
+        font-weight: 500;
     }
     .e-mail-item{
         font-size: 1.2rem;
     }
     .contact-item,.e-mail-item{
         text-align: center;
+    }
+    .us-item{
+        font-size: 18px;
+    }
+    .tel-group{
+        flex-direction: column!important;
     }
 }
