--- a/style.css
+++ b/style.css
@@ -7,10 +7,15 @@
 
 body {
   background: rgb(2, 21, 141);
-  background: linear-gradient(90deg, rgba(2, 21, 141, 1) 0%, rgba(0, 0, 0, 1) 48%, rgba(2, 21, 141, 1) 100%);
 }
 
+
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200&family=Roboto&display=swap');
+
+a{
+  text-decoration: none;
+  color: inherit;
+}
 
 .logo-container {
   padding: 5px;
@@ -153,13 +158,13 @@ body {
 }
 
 .card2 {
-  background-color: rgba(255, 255, 255, 0.76);
-  width: 44%;
+  background-color: rgba(0, 0, 0, 0.822);
+  width: 70%;
 }
 
 .card-body2 {
   text-align: center;
-
+  color: rgb(255, 255, 255);
 }
 
 .card-title2 {
@@ -168,7 +173,6 @@ body {
 
 .card-text2 {
   font-size: 20px;
-  font-weight: bolder;
 }
 
 .redes {
@@ -199,18 +203,17 @@ a:focus {
 }
 
 .service-item {
-  font-size: 25px;
+  font-size: 20px;
   color: white;
-  background-color: rgba(0, 0, 0, 0.50);
+  background-color: rgba(0, 0, 0, 0);
   border: 1px solid white;
-
+  font-weight: 500;
 }
 
 .service-item2 {
   font-size: 18px;
   color: white;
-  background-color: rgba(0, 0, 0, 0.50);
-  border: 1px solid white;
+  background-color: rgba(0, 0, 0, 0);
 }
 .us-item, .contact-item{
   font-size: 1.2rem;
@@ -241,7 +244,7 @@ a:focus {
 }
 footer{
   margin: 0;
-  padding: 5px;
+  padding: 15px;
   background-color: black;
   color: white;
 }
@@ -262,4 +265,11 @@ footer{
 
 .my-float{
 	margin-top:16px;
+}
+
+.list-group-item{
+  border: none;
+}
+.invert-color{
+ filter: invert(100%);
 }
