--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -78,7 +78,9 @@
 
     .card-body2 {
         text-align: center;
-
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
     }
 
     .card-title2 {
@@ -87,7 +89,6 @@
 
     .card-text2 {
         font-size: 18px;
-        font-weight: bolder;
     }
 
     .redes {
@@ -100,11 +101,12 @@
 
     .service-item {
         font-size: 18px;
+        font-weight: 200;
     }
     .service-item2{
         font-size: 18px;
-        text-align: justify;
-        font-weight: 500;
+        text-align: left;
+        font-weight: 200;
     }
     .e-mail-item{
         font-size: 1.2rem;
@@ -116,6 +118,14 @@
         font-size: 18px;
     }
     .tel-group{
+        flex-direction: column!important;
+    }
+    .pres{
+        text-align: center;
+        font-size: 20px;
+        font-weight: bold!important;
+    }
+    .row-services{
         flex-direction: column!important;
     }
 }
