--- a/style.css
+++ b/style.css
@@ -207,18 +207,22 @@ a:focus {
   color: white;
   background-color: rgba(0, 0, 0, 0);
   border: 1px solid white;
-  font-weight: 500;
+  font-weight: 300;
 }
 
 .service-item2 {
   font-size: 1.2rem;
   color: white;
   background-color: rgba(0, 0, 0, 0);
+  font-weight: 300;
 }
 .us-item, .contact-item{
   font-size: 1.2rem;
   background-color: rgba(0, 0, 0, 0);
   color: white;
+}
+.us-item{
+  font-weight: 300;
 }
 .contact-item{
   font-size: 1.3rem;
