--- a/style.css
+++ b/style.css
@@ -246,6 +246,9 @@ a:focus {
 .wp{
   width: 35px;
 }
+.wp-float{
+  width: 55px;
+}
 footer{
   margin: 0;
   padding: 15px;
@@ -259,9 +262,8 @@ footer{
 	height:60px;
 	bottom:40px;
 	right:40px;
-	background-color:#25d366;
+	background-color:#25d36500;
 	color:#FFF;
-	border-radius:50px;
 	text-align:center;
   font-size:30px;
   z-index:100;
